# PCS2024_Exercises

./: .gitignore  LICENSE  README.md
Esercitazione_1_IO/: README.md
Esercitazione_1_IO/Exercise1/: CMakeLists.txt  README.md  data.csv
Esercitazione_1_IO/Exercise1/Solution/: CMakeLists.txt  main.cpp  main_ripasso.cpp
Esercitazione_1_IO/Exercise2/: CMakeLists.txt  README.md  data.csv
Esercitazione_2_Eigen/: README.md
Esercitazione_2_Eigen/Exercise1/: CMakeLists.txt  README.md
Esercitazione_2_Eigen/Exercise1/Solution/: CMakeLists.txt  main.cpp  main_ripasso.cpp
Esercitazione_2_Eigen/Exercise2/: CMakeLists.txt  README.md
Esercitazione_3_OOP/: README.md
Esercitazione_3_OOP/Exercise_1/Solution/: CMakeLists.txt  main.cpp
Esercitazione_3_OOP/Exercise_1/Solution/src/: CMakeLists.txt  Rational.cpp  Rational.hpp  Utils.cpp  Utils.hpp
Esercitazione_3_OOP/Exercise_1/src/: CMakeLists.txt
Esercitazione_3_Struct/Exercise_1/: CMakeLists.txt  README.md
Esercitazione_4_C_Array/: README.md
Esercitazione_4_C_Array/Exercise_1/: CMakeLists.txt  README.md
Esercitazione_4_C_Array/Exercise_1/Solution/: CMakeLists.txt  main.cpp  main_ripasso.cpp  vectors.txt
Esercitazione_4_C_Array/Exercise_1/Solution/src/: CMakeLists.txt  Utils.cpp  Utils.hpp
Esercitazione_4_C_Array/Exercise_1/src/: CMakeLists.txt
Esercitazione_5_STL/: README.md
Esercitazione_5_STL/Exercise_1/: CMakeLists.txt  README.md
Esercitazione_5_STL/Exercise_1/Solution/: CMakeLists.txt  main.cpp
Esercitazione_5_STL/Exercise_1/Solution/src/: CMakeLists.txt  TriangularMesh.hpp  Utils.cpp  Utils.hpp
Esercitazione_5_STL/Exercise_1/TriangularMesh/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Esercitazione_5_STL/Exercise_1/src/: CMakeLists.txt
Esercitazione_6_Sorting/: README.md
Esercitazione_6_Sorting/Esercizio_1/: CMakeLists.txt  README.md
Esercitazione_6_Sorting/Esercizio_1/src/: CMakeLists.txt  SortingAlgorithm.hpp
Example/: CMakeLists.txt  README.md  main.cpp
Example/Solution/: CMakeLists.txt
Example/Solution/src/: CMakeLists.txt  sqrt_dot.hpp  sqrt_dot_test.hpp
Example/src/: sqrt_dot.hpp  sqrt_dot_test.hpp
Facsimile_Progetto_PCS_2024/: .gitignore  README.md
Facsimile_Progetto_PCS_2024/3rd_party_libraries/: CMakeLists.txt
Facsimile_Progetto_PCS_2024/3rd_party_libraries/cmake/: InstallEigen3.cmake  InstallGTest.cmake
Facsimile_Progetto_PCS_2024/FacsimileProject/: CMakeLists.txt  README.md  main.cpp  main_test.cpp
Facsimile_Progetto_PCS_2024/FacsimileProject/Documentazione/: plant_uml_documentation.txt
Facsimile_Progetto_PCS_2024/FacsimileProject/ListPolygons/: Domain_10.vtu  Domain_25.vtu  ListPolygons_10.txt  ListPolygons_25.txt
Facsimile_Progetto_PCS_2024/FacsimileProject/TestingParaview/Code/src/: CMakeLists.txt  UCDUtilities.cpp  UCDUtilities.hpp  UCD_test.hpp
Facsimile_Progetto_PCS_2024/FacsimileProject/src/: CMakeLists.txt  Polygons.cpp  Polygons.hpp
Facsimile_Progetto_PCS_2024/FacsimileProject/src_test/: CMakeLists.txt  TestPolygons.hpp
TestingParaview/Code/: CMakeLists.txt  main.cpp
TestingParaview/Code/src/: CMakeLists.txt  UCDUtilities.cpp  UCDUtilities.hpp  UCD_test.hpp  example_unit_test.hpp
